--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,3 +1,11 @@
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           Faux            ***************************************/
+/***************************************           FLEX            ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
+
+
 .userHome {
     width: calc(100vw - 00px);
     background-color: pink;
@@ -31,6 +39,14 @@
     display: inline-block;
 }
 
+
+
+.linkBtn {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
+
 /* .home-right form button {
     height: 40px;
     width: calc(20vw - 20px);
@@ -38,30 +54,51 @@
     border-radius: 3px;
 } */
 .user-show-recipe {
+
+}
+.recipe-data {
+
+}
+.recipe-img {
+
+}
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           SHOW            ***************************************/
+/***************************************           ORDER           ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
+.user-show-order {
     background-color: green;
     display: inline-block;
     border: solid black 1px;
     height: 30vw;
-    width: 90%;
-    margin: 0 auto;
+    width: 60vw;
+    margin: 0 auto 40px auto;
     text-align: justify;
   }
 
-.recipe-data {
+.order-data {
     display: inline-block;
 }
 
 
-.recipe-img {
+.order-img {
     background-color: yellow;
     height: 25vw;
     width: 25vw;
     border: black solid 1px;
     /* margin: 2.5vw 2.5vw 0 2.5vw; */
     display: inline-block;
+    left: 0;
 }
 
-
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           DELETE          ***************************************/
+/***************************************           RECIPE          ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
 .hide-delete {
     display: none;
 }
@@ -72,7 +109,19 @@
     z-index: 5;
 }
 
-.linkBtn {
-    width: 100%;
-    background-color: white;
+
+
+@media screen and (max-width: 767px) {
+    .userHome div {
+        display: block;
+    }
+    .order-img {
+        /* background-color: yellow; */
+        height: 90vw;
+        width: 90vw;
+        /* border: black solid 1px; */
+        /* margin: 2.5vw 2.5vw 0 2.5vw; */
+        /* display: inline-block; */
+        /* left: 0; */
+    }
 }
