--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -118,11 +118,30 @@
 
 @media screen and (max-width: 767px) {
     .userHome div {
-        display: inline-block;
+        display: block;
+        /* width: 100vw; */
+    }
+    .list-left button, .list-right button {
+        height: 40px;
+        margin: 10px;
     }
     .order-img {
         height: 90vw;
         width: 90vw;
+    }
+    .list-left, .list-right {
+        /* display: block; */
+        width: 100vw;
+        max-width: 100vw;
+        overflow: auto;
+        top: 0;
+    }
+    .list-left {
+        float: none;
+    }
+    .list-right {
+        float: none;
+        margin-right: 2.5vw;
     }
 }
 
