--- a/src/index.css
+++ b/src/index.css
@@ -234,7 +234,7 @@ grid-template-areas:
     /* display: grid; */
     /* width: 100vw; */
     /* height: 100vh; */
-    grid-template-rows: 60px 40px auto 40px;
+    grid-template-rows: 120px 40px auto 40px;
     grid-template-columns: 60px calc(100vw - 60px);
     /* background-color: orangered; */
     /* grid-gap: 0; */
@@ -261,8 +261,17 @@ grid-template-areas:
     font-size: 1em;
   }
   .App-logo {
-    height: 60px;
+    height: 30px;
   }
+  
+  .navBox > a {
+    font-size: 4vw;
+    /* font-size: max */
+    padding: 0 2vw ;
+    color: white;
+    font-weight: 700;
+  }
+
 }
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
