mobile-friendly resize for create and order

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -178,7 +178,8 @@ background-image:
 }
 .chalk {
     height: 5px;
-    width: calc(100% - 0px)
+    width: calc(100% - 0px);
+    bottom: 0;
 }
 
 /*********************************************************************************************************/
