center text in order form for mobile view

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -236,6 +236,7 @@ background-image:
         width: 100vw;
         display: block;
         float: none;
+        text-align: center;
     }
     .box2 {
         width: 100vw;
