--- a/src/index.css
+++ b/src/index.css
@@ -253,7 +253,9 @@ grid-template-areas:
   .grid-footer {
     padding: 10px 0 0 0;
   }
-
+  .grid-footer section {
+    font-size: 10px;
+  }
   h1 {
     font-size: 10vw;
   }
