--- a/src/index.css
+++ b/src/index.css
@@ -216,68 +216,6 @@ grid-template-areas:
 }
 
 
-
-
-
-
-
-
-/*********************************************************************************************************/
-/***************************************                           ***************************************/
-/***************************************           MEDIA           ***************************************/
-/***************************************           QUERY           ***************************************/
-/***************************************                           ***************************************/
-/*********************************************************************************************************/
-
-@media screen and (max-width: 767px) {
-  .grid-container {
-    /* display: grid; */
-    /* width: 100vw; */
-    /* height: 100vh; */
-    grid-template-rows: 120px 40px auto 40px;
-    grid-template-columns: 60px calc(100vw - 60px);
-    /* background-color: orangered; */
-    /* grid-gap: 0; */
-    /* padding: 0; */
-  grid-template-areas:
-    ' logo header '
-    ' nav nav '
-    ' main main '
-    ' footer footer';
-    grid-gap: 0;
-  }
-  .grid-nav {
-    text-align: center;
-    padding-left: 20px;
-  }
-  .grid-footer {
-    padding: 10px 0 0 0;
-  }
-  .grid-footer section {
-    font-size: 10px;
-  }
-  h1 {
-    font-size: 10vw;
-  }
-  h2 {
-    font-size: 7vw;
-  }
-  h3 {
-    font-size: 5vw;
-  }
-  .App-logo {
-    height: 30px;
-  }
-  
-  .navBox > a {
-    font-size: 4vw;
-    /* font-size: max */
-    padding: 0 2vw ;
-    color: white;
-    font-weight: 700;
-  }
-
-}
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
 /***************************************           SHOW            ***************************************/
@@ -297,7 +235,7 @@ grid-template-areas:
 
 
 .new-recipe {
-  width: calc(500px - 40px);
+  width: 460px;
   margin: 0 auto;
   /* background-color: yellow; */
   margin-bottom: 30px;
@@ -378,3 +316,73 @@ grid-template-areas:
 
 
 
+
+
+
+
+
+
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           MEDIA           ***************************************/
+/***************************************           QUERY           ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
+
+@media screen and (max-width: 767px) {
+  .grid-container {
+    /* display: grid; */
+    /* width: 100vw; */
+    /* height: 100vh; */
+    grid-template-rows: 25vw 40px auto 40px;
+    grid-template-columns: 60px calc(100vw - 60px);
+    /* background-color: orangered; */
+    /* grid-gap: 0; */
+    /* padding: 0; */
+  grid-template-areas:
+    ' logo header '
+    ' nav nav '
+    ' main main '
+    ' footer footer';
+    grid-gap: 0;
+  }
+  .grid-nav {
+    text-align: center;
+    /* padding-left: 20px; */
+  }
+  .grid-footer {
+    padding: 10px 0 0 0;
+  }
+  .grid-footer section {
+    font-size: 10px;
+  }
+  h1 {
+    font-size: 10vw;
+    margin-block-start: 7vw;
+  }
+  h2 {
+    font-size: 7vw;
+  }
+  h3 {
+    font-size: 5vw;
+  }
+  .App-logo {
+    height: 30px;
+  }
+  
+  .navBox > a {
+    font-size: 4vw;
+    /* font-size: max */
+    padding: 0 2vw ;
+    color: white;
+    font-weight: 700;
+  }
+
+  .new-recipe {
+    width: 100vw;
+    padding: 0;
+  }
+  .new-recipe .chalk-line {
+    width: 100vw;
+  }
+}
