--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -68,6 +68,11 @@
 .list-left {
     float: left;
 }
+.overflow-list {
+    overflow: auto;
+    height: calc(100vh - 380px);
+}
+
 .list-right {
     float: right;
     margin-right: 2.5vw;
@@ -176,9 +181,9 @@
     .list-left, .list-right {
         /* display: block; */
         width: 100vw;
-        /* height: 200px; */
+        height: 50vh;
         max-width: 100vw;
-        /* overflow: auto; */
+        overflow: auto;
         position: relative;
         /* top: none; */
     }
