--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -107,10 +107,13 @@
     left: 0;
 }
 
+
+
+
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
-/***************************************           DELETE          ***************************************/
-/***************************************           RECIPE          ***************************************/
+/***************************************         EDIT/DELETE       ***************************************/
+/***************************************         CONTAINER         ***************************************/
 /***************************************                           ***************************************/
 /*********************************************************************************************************/
 .hide-delete {
@@ -164,10 +167,12 @@
 /***************************************                           ***************************************/
 /*********************************************************************************************************/
 @media screen and (max-width: 767px) {
-
+    .overflow-list {
+        overflow: disabled;
+        height: auto;
+    }
     .userHome div {
         display: block;
-        /* width: 100vw; */
     }
     .list-left button, .list-right button {
         /* width: 60vw; */
@@ -179,13 +184,10 @@
         width: 90vw;
     }
     .list-left, .list-right {
-        /* display: block; */
         width: 100vw;
         height: 50vh;
         max-width: 100vw;
-        overflow: auto;
         position: relative;
-        /* top: none; */
     }
     .list-left {
         float: none;
@@ -196,36 +198,26 @@
     }
     .home-show-orders {
         width: 100vw;
-        /* display: inline-block; */
     }
 
     .home-right {
-        /* display: inline-block; */
         width: 100vw;
-        /* margin-right: 0px; */
     }
     .home-left {
         display: inline-block;
         width: 100vw;
         float: none;
-        /* text-align: left; */
     }
     .home-left > h3 {
-        /* position: absolute; */
-        /* float: right; */
         z-index: 5;
     }
     .home-left > button {
         display: inline-block;
         margin: 1vw;
         height: 40px;
-        /* width: 100vw; */
-        /* float: none; */
-        /* text-align: left; */
     }
     .user-show-recipe {
         position: relative;
-        /* display: inline-block; */
         width: 60vw;
         height: 10vw;
         margin: 10px auto ;
@@ -246,12 +238,3 @@
         z-index: 5;
     }
 }
-
-
-
-
-
-
-
-
-
