--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,12 +1,3 @@
-/*********************************************************************************************************/
-/***************************************                           ***************************************/
-/***************************************           Faux            ***************************************/
-/***************************************           FLEX            ***************************************/
-/***************************************                           ***************************************/
-/*********************************************************************************************************/
-.userHome {
-    width: calc(100vw - 00px);
-}
 
 .home-left {
     display: inline-block;
@@ -34,6 +25,16 @@
 .home-right form {
     display: inline-block;
 }
+
+@media screen and (min-width: 768px){
+    .overflow-list {
+        height: calc(100vh - 380px);
+        overflow: auto;
+    }
+}
+
+
+
 
 
 
@@ -68,11 +69,6 @@
 .list-left {
     float: left;
 }
-.overflow-list {
-    overflow: auto;
-    height: calc(100vh - 380px);
-}
-
 .list-right {
     float: right;
     margin-right: 2.5vw;
@@ -107,13 +103,10 @@
     left: 0;
 }
 
-
-
-
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
-/***************************************         EDIT/DELETE       ***************************************/
-/***************************************         CONTAINER         ***************************************/
+/***************************************           DELETE          ***************************************/
+/***************************************           RECIPE          ***************************************/
 /***************************************                           ***************************************/
 /*********************************************************************************************************/
 .hide-delete {
@@ -167,12 +160,10 @@
 /***************************************                           ***************************************/
 /*********************************************************************************************************/
 @media screen and (max-width: 767px) {
-    .overflow-list {
-        overflow: disabled;
-        height: auto;
-    }
+
     .userHome div {
         display: block;
+        /* width: 100vw; */
     }
     .list-left button, .list-right button {
         /* width: 60vw; */
@@ -184,10 +175,13 @@
         width: 90vw;
     }
     .list-left, .list-right {
+        /* display: block; */
         width: 100vw;
-        height: 50vh;
+        /* height: 200px; */
         max-width: 100vw;
+        /* overflow: auto; */
         position: relative;
+        /* top: none; */
     }
     .list-left {
         float: none;
@@ -198,26 +192,36 @@
     }
     .home-show-orders {
         width: 100vw;
+        /* display: inline-block; */
     }
 
     .home-right {
+        /* display: inline-block; */
         width: 100vw;
+        /* margin-right: 0px; */
     }
     .home-left {
         display: inline-block;
         width: 100vw;
         float: none;
+        /* text-align: left; */
     }
     .home-left > h3 {
+        /* position: absolute; */
+        /* float: right; */
         z-index: 5;
     }
     .home-left > button {
         display: inline-block;
         margin: 1vw;
         height: 40px;
+        /* width: 100vw; */
+        /* float: none; */
+        /* text-align: left; */
     }
     .user-show-recipe {
         position: relative;
+        /* display: inline-block; */
         width: 60vw;
         height: 10vw;
         margin: 10px auto ;
