--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,13 @@ grid-template-areas:
   /* color: orangered; */
 }
 
+.grid-header > img {
+  height: 110px;
+  margin: 20px auto;
+  /* width: 500px; */
+
+}
+
 .grid-header h1 {
   color: rgb(255, 69, 0, .8);
   /* text-shadow: 0px 0px 2px rgb(0, 0, 0, .5), -1px -1px 2px rgb(0, 0, 0, .5) ; */
