--- a/src/index.1.css
+++ b/src/index.1.css
@@ -66,15 +66,16 @@ a {
   width: 100vw;
   height: 100vh;
   grid-template-rows: 150px 40px auto 60px;
-  grid-template-columns: 100vw;
-  background-color: white;
+  grid-template-columns: 100px calc(100vw - 200px) 100px;
+  background-color: orangered;
   grid-gap: 0;
   padding: 0;
 grid-template-areas:
-  '  header '
-  '  nav '
-  '  main '
-  '  footer ';
+  ' header header header '
+  ' nav nav nav'
+  ' main main main '
+  /* ' menu main right ' */
+  ' footer footer footer';
   grid-gap: 0;
 }
 
@@ -93,6 +94,29 @@ grid-template-areas:
   height: 110px;
   margin: 20px auto;
 }
+
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           GRID            ***************************************/
+/***************************************           LOGO            ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
+.grid-logo {
+  grid-area: logo;
+  padding: 25px;
+  display: none;
+}
+
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           GRID            ***************************************/
+/***************************************           RIGHT           ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
+.grid-right {
+  grid-area: right;
+}
+
 
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
