--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,3 @@
-.App {
-  text-align: center;
-}
-
-/* .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-} */
-
-.App-logo {
-  height: 100px;
-}
-
-/* className="App-logo" */
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 .about {
   padding: 20px;
 }
@@ -86,35 +63,18 @@
   height: 40px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 767) {
   .home {
-    /* height: 100%; */
     width: 96vw;
     padding: 2vw;
-    /* margin-top: 0px; */
-    /* background-image: url('./tiedye.jpg'); */
-    /* background-size: cover; */
-    /* background-repeat: no-repeat; */
-    /* background-position: center; */
   }
   
   .form-block {
     width: 90vw;
-    /* height: 240px; */
-    /* border: 5px #000 solid; */
-    /* border-radius: 3px; */
-    /* margin: 20px auto; */
-    /* background-color: #fff; */
   }
   
   .form-block input {
-    /* height: 20px; */
-    width: 80vw;
-    /* border: 1px solid rgb(123, 63, 0); */
-    /* border-radius: 3px; */
-    /* margin-top: 10px; */
-  
-  
+    width: 80vw;  
   }
   
   .form-block button, .saveBtn {
@@ -132,8 +92,6 @@
   
   .registerBtn {
     float: right;
-  
-  
   }
   
   .loginBtn {
