--- a/src/index.css
+++ b/src/index.css
@@ -161,17 +161,41 @@ grid-template-areas:
 
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
+/***************************************           CHALK           ***************************************/
+/***************************************           LINE            ***************************************/
+/*********************************************************************************************************/
+.chalk, .chalk-line, .chalk-bottom {
+  height: 5px;
+  margin: 0 auto;
+}
+
+.chalk-line {
+  width: 460px;
+}
+.chalk-bottom {
+  width: 100vw;
+  position: relative;
+  top: -12px;
+  z-index: 500;
+}
+.chalk {
+  width: 100%;
+  bottom: 0;
+}
+
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
 /***************************************           SHOW            ***************************************/
 /***************************************           MODAL           ***************************************/
 /***************************************                           ***************************************/
 /*********************************************************************************************************/
-.form {
-  background-color: white;
-}
-
 #title {
   font-family: 'Smokum', 'Times New Roman', Times, serif;
   font-size: 2em;
+}
+.chili {
+  height: 60px;
+  width: 60px;
 }
 
 .new-recipe {
@@ -181,21 +205,9 @@ grid-template-areas:
   padding: 0 20px 30px 20px;
 }
 
-.chili {
-  height: 60px;
-  width: 60px;
-}
-
 .show-recipe {
   margin-right: 20px;
 }
-
-.chalk-line {
-  width: 460px;
-  height: 5px;
-  margin: 0 auto;
-}
-
 .show-recipe span {
   float: left;
   margin-left: 20px;
@@ -271,6 +283,9 @@ grid-template-areas:
     padding: 0;
   }
   .new-recipe .chalk-line {
+    width: 100vw;
+  }
+  .chalk {
     width: 100vw;
   }
 }
