add headers component while testing different wood tones

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ a {
 /***************************************                           ***************************************/
 /*********************************************************************************************************/
 .grid-container {
-  background-image: url('wood-panel-header.png');
+  background-image: url('wood-panel-vintage.png');
   background-repeat: repeat-x;
   display: grid;
   width: 100vw;
