move folder for easier access, added another label placeholder

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   width: calc(100vw - 40px);
   padding: 20px;
   margin-top: 0px;
-  background-image: url('./tiedye.jpg');
+  background-image: url('./img/tiedye.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
