--- a/src/components/levi/Headers.css
+++ b/src/components/levi/Headers.css
@@ -25,18 +25,22 @@
     width: 46vw;
 }
 
-.labels {
-    width: 60vw;
 
-    margin: 20px 20vw;
+
+
+
+
+.labels {
+
 }
 
 .labels > div {
-    height: 80vw;
-    width: 60vw;
-    margin: 5vw 0;;
+    height: 250px;
+    /* width: ; */
+    margin: 20px 0;;
     background-position: center;
     background-size: contain;
+    background-repeat: no-repeat;
 
 
 }
@@ -48,10 +52,13 @@
     background-image: url('../../img/labels/green-red-white-label.png');
 }
 .label3 {
+    background-image: url('../../img/labels/tiedye-example.png');
+}
+.label4 {
     background-image: url('../../img/labels/white-label.png');
 }
 
 .labels img {
-    width: 100%;
-    height: 60vh;
+    /* width: 100%; */
+    /* height: 60vh; */
 }
