--- a/src/components/levi/Headers.css
+++ b/src/components/levi/Headers.css
@@ -58,7 +58,19 @@
     background-image: url('../../img/labels/white-label.png');
 }
 
+.labels h3 {
+    font-size: 34px;
+    margin-top: 20px;
+}
+
+.labels h4 {
+    margin-top: 0px;
+    padding: 5px 0 ;
+    width: 100%;
+}
+
 .labels img {
-    /* width: 100%; */
-    /* height: 60vh; */
+    display: block;
+    height: 120px;
+    margin: 20px auto 0 auto;
 }
