--- a/src/components/levi/Headers.css
+++ b/src/components/levi/Headers.css
@@ -59,6 +59,10 @@
     background-image: url('../../img/labels/white-label.png');
 }
 
+.label3 h3 {
+    text-shadow: 2px 2px 0 black, -2px -2px 0 black, -2px 2px 0 black, 2px -2px 0 black;
+}
+
 .labels h3 {
     font-size: 34px;
     margin-top: 26px;
