--- a/src/components/levi/Headers.css
+++ b/src/components/levi/Headers.css
@@ -63,6 +63,10 @@
     text-shadow: 2px 2px 0 black, -2px -2px 0 black, -2px 2px 0 black, 2px -2px 0 black;
 }
 
+.label3 h4 {
+    text-shadow: 1px 1px 0 black, -1px -1px 0 black, -1px 1px 0 black, 1px -1px 0 black;
+}
+
 .labels h3 {
     font-size: 34px;
     margin-top: 26px;
