--- a/src/components/modal/Show.css
+++ b/src/components/modal/Show.css
@@ -17,3 +17,27 @@
     text-align: right;
   }
   
+
+
+  .show-style {
+    font-family: 'Smokum', 'Times New Roman', Times, serif;
+    font-size: 2em;
+    margin: 10px 0 !important;
+  }
+
+  .show-style-div {
+    width: 50vw;
+    margin: -10px 25vw 0px 25vw;
+    /* height: 80px; */
+  }
+  .show-left {
+    float: left;
+  }
+  .show-right {
+    float: right;
+  }
+  .show-style-div > div {
+    display: inline-block;
+    margin: 0 20px;
+
+  }
