--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,95 @@ a {
   z-index: 1;
   margin: -7vw;
 }
+/*********************************************************************************************************/
+/***************************************                           ***************************************/
+/***************************************           LABELS           ***************************************/
+/***************************************                           ***************************************/
+/*********************************************************************************************************/
 
+.label1 {
+  background-image: url('./img/labels/wood-label.png');
+}
+.label2 {
+  background-image: url('./img/labels/green-red-white-label.png');
+}
+.label3 {
+  background-image: url('./img/labels/tiedye-example.png');
+  color: white;
+}
+.label4 {
+  background-image: url('./img/labels/white-label.png');
+}
+
+.label3 h3 {
+  text-shadow: 2px 2px 0 black, -2px -2px 0 black, -2px 2px 0 black, 2px -2px 0 black;
+}
+
+.label3 h4 {
+  text-shadow: 1px 1px 0 black, -1px -1px 0 black, -1px 1px 0 black, 1px -1px 0 black;
+}
+
+/*********************************  FORM */
+.pick-label > div {
+  position: relative;
+  height: 250px;
+  margin: 20px 0;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.pick-label h3 {
+  font-size: 34px;
+  margin-top: 26px;
+}
+.pick-label h4 {
+  margin-top: 0px;
+  padding: 5px 0 ;
+  width: 100%;
+}
+.pick-label img {
+  display: block;
+  height: 120px;
+  margin: 10px auto 0 auto;
+}
+.shrink > div {
+  transform: scale(.3);
+  /* float: left; */
+}
+
+/********************************* SCALABLE */
+.labels {
+  position: absolute;
+}
+
+.labels > div {
+  height: 20vw;
+  margin: 1.6vw 0;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+}
+.labels h3 {
+  font-size: 2.7vw;
+  margin-top: 2.1vw;
+}
+.labels h4 {
+  font-size: 1.3vw;
+  margin-top: 0px;
+  padding: .4vw 0;
+  width: 100%;
+}
+.labels img {
+  display: block;
+  height: 9.6vw;
+  margin: .8vw auto 0 auto;
+}
+
+.toggle-labels {
+  /* display: inline-block; */
+  width: 30vw;
+}
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
 /***************************************           GRID            ***************************************/
@@ -227,6 +315,7 @@ grid-template-areas:
 
 }
 
+
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
 /***************************************           MEDIA           ***************************************/
@@ -294,3 +383,4 @@ grid-template-areas:
     width: 100vw;
   }
 }
+
