lables2 succes, also add About deets

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -41,7 +41,7 @@
 
 .user-show-recipe {
     position: relative;
-    display: inline-block;
+    /* display: inline-block; */
     width: 30vw;
     height: 6vw;
     margin: 10px auto 0 auto;
