--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,3 @@
-
 .home-left {
     display: inline-block;
     width: 30vw;
@@ -47,7 +46,7 @@
     margin: 10px auto 0 auto;
 }
 
-.list-left, .list-right {
+/* .list-left, .list-right {
     display: inline-block;
     max-width: 33vw;
     position: relative;
@@ -59,7 +58,7 @@
 .list-right {
     float: right;
     margin-right: 2.5vw;
-}
+} */
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
 /***************************************           SHOW            ***************************************/
@@ -122,15 +121,12 @@
     transition: all .5s linear;
 }
 
-
 .off{
     display: none;
 }
-
 .on {
     background-color: orangered;
 }
-
 
 .home-show-orders {
     width: 60vw;
@@ -139,7 +135,6 @@
 
 .user-icon {
     height: .8em;
-
 }
 
 .label {
@@ -153,7 +148,6 @@
 /***************************************                           ***************************************/
 /*********************************************************************************************************/
 @media screen and (max-width: 767px) {
-
     .userHome div {
         display: block;
     }
@@ -167,13 +161,13 @@
         max-width: 100vw;
         position: relative;
     }
-    .list-left {
+    /* .list-left {
         float: none;
     }
     .list-right {
         float: none;
         margin-right: 2.5vw;
-    }
+    } */
     .home-show-orders {
         width: 100vw;
     }
