--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,11 @@ a {
   margin: -7vw;
 }
 
+.activeNav {
+  text-decoration: underline;
+  /* background-color: transparent; */
+}
+
 /*********************************************************************************************************/
 /***************************************                           ***************************************/
 /***************************************           GRID            ***************************************/
