--- a/src/index.css
+++ b/src/index.css
@@ -215,8 +215,12 @@ grid-template-areas:
 }
 
 .show-recipe {
-  margin-right: 20px;
+  width: 300px;
 }
+.show-recipe .chalk-line {
+  width: 300px;
+}
+
 .show-recipe span {
   float: left;
   margin-left: 20px;
@@ -229,6 +233,55 @@ grid-template-areas:
   width: 100vw;
   background-color: white;
 
+}
+.new-recipe button {
+  height: 40px;
+  width: calc(30vw - 20px);
+  margin: 10px;
+  border-radius: 3px;
+}
+
+.new-recipe section {
+  text-align: right;
+}
+
+.new-recipe ul {
+  margin-block-end: 0em;
+}
+
+.new-recipe li {
+  text-align: right;
+}
+
+
+
+.show-style {
+  font-family: 'Smokum', 'Times New Roman', Times, serif;
+  font-size: 2em;
+  margin: 10px 0 !important;
+}
+
+.show-style-div {
+  width: 50vw;
+  margin: -10px 25vw 0px 25vw;
+  /* height: 80px; */
+}
+.show-left {
+  float: left;
+}
+.show-right {
+  float: right;
+}
+.show-style-div > div {
+  display: inline-block;
+  margin: 0 20px;
+
+}
+.show-label > div{
+  height: 250px;
+  width: 195px;
+  background-size: cover;
+  position: absolute;
 }
 
 /*********************************************************************************************************/
